# HNCcorr

./: .editorconfig  .gitignore  .pylintrc  .readthedocs.yml  .travis.yml  LICENSE.md  MANIFEST.in  Makefile  Pipfile  README.md  requirements.txt  setup.cfg  setup.py
docs/source/: conf.py  hnccorr.base.rst  hnccorr.candidate.rst  hnccorr.config.rst  hnccorr.edge_selection.rst  hnccorr.embedding.rst  hnccorr.graph.rst  hnccorr.hnc.rst  hnccorr.hnccorr.rst  hnccorr.movie.rst  hnccorr.patch.rst  hnccorr.postprocessor.rst  hnccorr.rst  hnccorr.seeder.rst  hnccorr.seeds.rst  hnccorr.segmentation.rst  hnccorr.utils.rst  index.rst  modules.rst  quickstart.rst
matlab/: HNCcorr.m  README.md  analyzeCells.m  generateH5File.m  main.m
matlab/subroutines/: SNC.m  Segmentation.m  Solution.m  compileMexFiles.m  computeNeuronCover.m  convertToArcMatrix.m  createJSON.m  evalSolution.m  evaluateSeedsAgainstROIs.m  evaluateSegmentations.m  fillInHoles.m  findLargestComponent.m  getMean.m  jsonToROIsConverter.m  jsonToSegmentationConverter.m  matrixComponentSearch.m  prepareSNC.m  saveROIs.m  storeCell.m  updateSolution.m  visualizeSeedSelection.m
src/hnccorr/: __init__.py  base.py  candidate.py  config.py  edge_selection.py  embedding.py  embeddings.py  example.py  graph.py  hnc.py  hnccorr.py  movie.py  (+6 more)
tests/: conftest.py  test_candidate.py  test_config.py  test_edge_selection.py  test_embedding.py  test_embeddings.py  test_graph.py  test_hnc.py  test_hnccorr.py  test_movie.py  test_patch.py  test_postprocessor.py  test_seeder.py  test_seeds.py  test_segmentation.py  test_utils.py
(+39 files in other folders)
