[aliases]
test=pytest

[metadata]
license_file = LICENSE.md

[pydocstyle]
ignore=D100,D104,D406,D407,D413

[pycodestyle]
max_line_length=88

[coverage:run]
branch = true
source = src/

[coverage:report]
show_missing = true
exclude_lines =
    pragma: no cover
    @abstract


[tool:pytest]
pytest_plugins = ['pytest_profiling']
testpaths = tests/unit
